--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -100,196 +100,125 @@
   </div>
 </section>
 {% endif %}
-<section id="section-prices" class="section-common">
-  <div class="section-common__title container">
-      <h2>Цены</h2>
-  </div>
-  <div class="section-common__content container">
-     <div class="container"> 
-     
-      <ul class="duthoning">
-        <li>
-        <button class="koducion-mautegad"><h2>ZorNet.Ru — сайт для Вебмастер</h2></button>
-        <div class="mesiten-senaple">
-          <p class="font text-center  ">
-            Ремонт ногтя <br>
-            50р<br>
-            Дизайн(геометрия,вензеля,рисунок) <br>
-            25р<br>
-            Френч <br>
-            100р<br>
-            Лунки/втирка на все ногти <br>
-            150р<br>
-            Стразы <br>
-            25р.<br>
-            Наращивание ногтей <br>
-            1200р.<br>
-            Корекция/укрепление твердым гелем <br>
-            800р.<br>
-            Корекция/укрепление гель-лаком <br>
-            700р.</p>
+<section id="section-prices" class="section-common ">
+  <div class="container">
+    <div class="row featurette">
+      <div class="col-md-6 order-md-2">
+        <h2 class="featurette-heading text-center">Прайс</h2>
+        <div class="container_prices wow zoomIn ">
+          <ul>
+            <li>
+              <input type="checkbox" checked>
+              <i></i>
+              <h2>Маникюр</h2>
+              <p class="text-center wow ">
+                Ремонт ногтя <br>
+                50р<br>
+                Дизайн(геометрия,вензеля,рисунок) <br>
+                25р<br>
+                Френч <br>
+                100р<br>
+                Лунки/втирка на все ногти <br>
+                150р<br>
+                Стразы <br>
+                25р.<br>
+                Наращивание ногтей <br>
+                1200р.<br>
+                Корекция/укрепление твердым гелем <br>
+                800р.<br>
+                Корекция/укрепление гель-лаком <br>
+                700р.</p><br>
+            </li>
+            <li>
+              <input type="checkbox" checked>
+              <i></i>
+              <h2>Парикмахерские услуги</h2>
+              <p class="text-center">Выпрямление и питание волос (Кератин) <br>
+                2200р.<br>
+                Стрижка модельная <br>
+                300р<br>
+                Стрижка креативная<br>
+                400р<br>
+                Стрижка на волосы средней длины <br>
+                350р.><br>
+                Стрижка на волосы средней длины<br>
+                450р.<br>
+
+                Стрижка модельная <br>
+                300р.<br>
+                Стрижка двумя насадками<br>
+                250р.<br>
+                Стрижка одной насадкой <br>
+                200р.<br>
+                Стрижка "наголо"<br>
+                100р.<br></p>
+            </li>
+            <li>
+              <input type="checkbox" checked>
+              <i></i>
+              <h2>Эстетическая косметология</h2>
+              <p class="text-center">
+                Чистка лица<br>
+                1300р.<br>
+                Мультивитаминный уход <br>
+                800р.<br>
+                Детокс кожи лица <br>
+                1000р.<br>
+                Альгинатная маска <br>
+                1000р.<br>
+              </p>
+            </li>
+            <li>
+              <input type="checkbox" checked>
+              <i></i>
+              <h2>Макияж</h2>
+              <p class="text-center">
+                Макияж дневной <br>
+                1300р.<br>
+                Макияж вечерний <br>
+                1500р.<br>
+                Макияж свадебный/выпускной<br>
+                1700р.<br>
+                Макияж пробный <br>
+                1200р.<br>
+              </p>
+            </li>
+            <li>
+              <input type="checkbox" checked>
+              <i></i>
+              <h2>Депиляция</h2>
+              <p class="text-center">
+                Подмышечные впадины <br>
+                300р.<br>
+                Класическое бикини <br>
+                450р.<br>
+                Глубокое бикини <br>
+                700р.<br>
+                Депиляция ног <br>
+                590р.<br>
+                Депиляция лица <br>
+                100р.<br>
+                Депиляция рук <br>
+                350р.<br>
+                Парафинотерапия руг/ног <br>
+                250р.<br>
+              </p>
+            </li>
+          </ul>
+
         </div>
-        </li>
-        <li>
-        <button class="koducion-mautegad"><h2>Web Меню для сайта</h2></button>
-        <div class="mesiten-senaple">
-        
-        </div>
-        </li>
-        <li>
-        <button class="koducion-mautegad"><h2>Всплывающие окна Ajax</h2></button>
-        <div class="mesiten-senaple">
-        <p><p class="font text-center  ">
-          Ремонт ногтя <br>
-          50р<br>
-          Дизайн(геометрия,вензеля,рисунок) <br>
-          25р<br>
-          Френч <br>
-          100р<br>
-          Лунки/втирка на все ногти <br>
-          150р<br>
-          Стразы <br>
-          25р.<br>
-          Наращивание ногтей <br>
-          1200р.<br>
-          Корекция/укрепление твердым гелем <br>
-          800р.<br>
-          Корекция/укрепление гель-лаком <br>
-          700р.</p></p>
-        </div>
-        </li>
-         
-        <li>
-        <button class="koducion-mautegad"><h2>Лицензионные ключи NOD 32 генератор</h2></button>
-        <div class="mesiten-senaple">
-        <p><p class="font text-center  ">
-          Ремонт ногтя <br>
-          50р<br>
-          Дизайн(геометрия,вензеля,рисунок) <br>
-          25р<br>
-          Френч <br>
-          100р<br>
-          Лунки/втирка на все ногти <br>
-          150р<br>
-          Стразы <br>
-          25р.<br>
-          Наращивание ногтей <br>
-          1200р.<br>
-          Корекция/укрепление твердым гелем <br>
-          800р.<br>
-          Корекция/укрепление гель-лаком <br>
-          700р.</p></p>
-        </div>
-        </li>
-        </ul>
       </div>
+      <div class="col-md-6 ">
+        <div class="img   ">
+          <img class="img-fluid yslugi" width="500" height="400"
+            src="{{ url_for('static', filename='css/images/pr.jpg') }}" alt="">
+        </div>
+        <title>Placeholder</title>
+        <rect fill="#eee" width="100%" height="100%" />
 
-</div>
-<!-- Accordion wrapper -->
-    
-     <!-- <ul>
-        <li>
-          <input type="checkbox" checked>
-          <i></i>
-          <h2 class="font">Маникюр</h2>
-          <p class="font text-center  ">
-            Ремонт ногтя <br>
-            50р<br>
-            Дизайн(геометрия,вензеля,рисунок) <br>
-            25р<br>
-            Френч <br>
-            100р<br>
-            Лунки/втирка на все ногти <br>
-            150р<br>
-            Стразы <br>
-            25р.<br>
-            Наращивание ногтей <br>
-            1200р.<br>
-            Корекция/укрепление твердым гелем <br>
-            800р.<br>
-            Корекция/укрепление гель-лаком <br>
-            700р.</p>
-        </li>
-        <li>
-          <input type="checkbox" checked>
-          <i></i>
-          <h2 class="font">Парикмахерские услуги</h2>
-          <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
-            2200р.<br>
-            Стрижка модельная <br>
-            300р<br>
-            Стрижка креативная<br>
-            400р<br>
-            Стрижка на волосы средней длины <br>
-            350р.><br>
-            Стрижка на волосы средней длины<br>
-            450р.<br>
-
-            Стрижка модельная <br>
-            300р.<br>
-            Стрижка двумя насадками<br>
-            250р.<br>
-            Стрижка одной насадкой <br>
-            200р.<br>
-            Стрижка "наголо"<br>
-            100р.<br></p>
-        </li>
-        <li>
-          <input type="checkbox" checked>
-          <i></i>
-          <h2 class="font">Эстетическая косметология</h2>
-          <p class="font text-center">
-            Чистка лица<br>
-            1300р.<br>
-            Мультивитаминный уход <br>
-            800р.<br>
-            Детокс кожи лица <br>
-            1000р.<br>
-            Альгинатная маска <br>
-            1000р.<br>
-          </p>
-        </li>
-        <li>
-          <input type="checkbox" checked>
-          <i></i>
-          <h2 class="font">Макияж</h2>
-          <p class="font text-center">
-            Макияж дневной <br>
-            1300р.<br>
-            Макияж вечерний <br>
-            1500р.<br>
-            Макияж свадебный/выпускной<br>
-            1700р.<br>
-            Макияж пробный <br>
-            1200р.<br>
-          </p>
-        </li>
-        <li>
-          <input type="checkbox" checked>
-          <i></i>
-          <h2 class="font">Депиляция</h2>
-          <p class=" font text-center">
-            Подмышечные впадины <br>
-            300р.<br>
-            Класическое бикини <br>
-            450р.<br>
-            Глубокое бикини <br>
-            700р.<br>
-            Депиляция ног <br>
-            590р.<br>
-            Депиляция лица <br>
-            100р.<br>
-            Депиляция рук <br>
-            350р.<br>
-            Парафинотерапия руг/ног <br>
-            250р.<br>
-          </p>
-        </li>
-      </ul>-->
+      </div>
     </div>
-
-    
-  </div>
+    </divc>
 </section>
 
 <!--<section id="section-prices" class="section-common ">
