--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -67,7 +67,7 @@
     
     </div>
   </div>
-</section>-->
+</section>
 
 <section id="section-gallery" class="section-common ">
   <div class="section-common__title container ">
