--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -69,7 +69,7 @@
   </div>
 </section>
 
-<section id="section-gallery" class="section-common ">
+<!--<section id="section-gallery" class="section-common ">
   <div class="section-common__title container ">
     <h2>Фотогалерея</h2>
   </div>
@@ -99,14 +99,14 @@
   </div>
   </div>
 </section>
-{% endif %}
+{% endif %}-->
 
 
 
 
 
 
-</section>
+
 <section id="section-contacts" class="section-common">
   <div class="section-common__title container">
     <h2>Контакты</h2>
