--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -107,7 +107,7 @@
 
 
 
-<section id="section-contacts" class="section-common">
+<!--<section id="section-contacts" class="section-common">
   <div class="section-common__title container">
     <h2>Контакты</h2>
   </div>
@@ -157,5 +157,5 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
 {% endblock %}
