--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  {% if gallery %}
+  <!--{% if gallery %}
 </section>
 <section id="section-services" class="section-common">
   <div class="section-common__tit container ">
@@ -67,7 +67,7 @@
     
     </div>
   </div>
-</section>
+</section>-->
 
 <!--<section id="section-gallery" class="section-common ">
   <div class="section-common__title container ">
