--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -7,21 +7,25 @@
 
         <div class="container">
           <h3 class="ponts">Миссия</h3>
+          <hr>
          <p class="font"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
         <div class="container offset-md-1">
           <h3 class="ponts text-center">Политика</h3>
+          <hr>
           <p class="font"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
           <h3 class="ponts"> Этикет</h3>
+          <hr>
           <p class="font"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
         <div class="container offset-md-1">
           <h3 class="ponts text-center">Философия</h3>
+          <hr>
           <p class="font" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
         </div>
         <p class="font text-center">Добро пожаловать...</p>
@@ -113,7 +117,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Маникюр</h2>
-              <p class="text-center wow ">
+              <p class="font text-center" >
                 Ремонт ногтя <br>
                 50р<br>
                 Дизайн(геометрия,вензеля,рисунок) <br>
@@ -135,7 +139,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Парикмахерские услуги</h2>
-              <p class="text-center">Выпрямление и питание волос (Кератин) <br>
+              <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
                 2200р.<br>
                 Стрижка модельная <br>
                 300р<br>
@@ -159,7 +163,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Эстетическая косметология</h2>
-              <p class="text-center">
+              <p class="font text-center">
                 Чистка лица<br>
                 1300р.<br>
                 Мультивитаминный уход <br>
@@ -174,7 +178,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Макияж</h2>
-              <p class="text-center">
+              <p class="font text-center">
                 Макияж дневной <br>
                 1300р.<br>
                 Макияж вечерний <br>
@@ -189,7 +193,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Депиляция</h2>
-              <p class="text-center">
+              <p class="font text-center">
                 Подмышечные впадины <br>
                 300р.<br>
                 Класическое бикини <br>
