--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -117,7 +117,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Маникюр</h2>
-              <p class="font text-center" >
+              <p class="fontr text-center" >
                 Ремонт ногтя <br>
                 50р<br>
                 Дизайн(геометрия,вензеля,рисунок) <br>
@@ -139,7 +139,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Парикмахерские услуги</h2>
-              <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
+              <p class="fontr text-center">Выпрямление и питание волос (Кератин) <br>
                 2200р.<br>
                 Стрижка модельная <br>
                 300р<br>
@@ -163,7 +163,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Эстетическая косметология</h2>
-              <p class="font text-center">
+              <p class="fontr text-center">
                 Чистка лица<br>
                 1300р.<br>
                 Мультивитаминный уход <br>
@@ -178,7 +178,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Макияж</h2>
-              <p class="font text-center">
+              <p class="fontr text-center">
                 Макияж дневной <br>
                 1300р.<br>
                 Макияж вечерний <br>
@@ -193,7 +193,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Депиляция</h2>
-              <p class="font text-center">
+              <p class="fontr text-center">
                 Подмышечные впадины <br>
                 300р.<br>
                 Класическое бикини <br>
