--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -83,6 +83,38 @@
 </section>
 {% endif %}
 
+<section id="section-services" class="section-common">
+  <div class="section-common__tit container ">
+    <h2 class="ivi">Услуги</h2>
+  </div>
+  <div class="section-common__content container ">
+
+    <div class="row ">
+      {% for service in services %}
+      {% if service.show %}
+      <div class="col-md-4 ">
+
+        <div class="card  mb-4 shadow-sm text-center wow zoomIn" data-wow-delay="0.1s">
+
+          {% if service.image %}
+          <img class="img-thumbnail gap  " src="{{ url_for('static', filename=service.image) }}" alt="">
+          {% else %}
+          <img src="https://via.placeholder.com/256x170" class="card-img-top" alt="">
+          {% endif %}
+          <div class="card-body featurette-heading text-center">
+            <h5 class="card-title text-uppercase font-weight-bold">{{ service.title }}</h5>
+            <p class="card-text">{{ service.descr }}</p>
+
+          </div>
+        </div>
+      </div>
+      {% endif %}
+      {% endfor %}
+    </div>
+  </div>
+
+</section>
+
 
 
 
