--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -132,6 +132,20 @@ body {
 #section-gallery .gallery-img img:hover {
   opacity: 0.6;
 }
+#header__content {
+  background-color: #2c222d;
+  background-image: url("./images/zz.jpg");
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+  background-size: contain;
+  background-attachment: fixed;
+
+  color: white;
+  height: 70vh;
+
+  display: flex;
+  align-items: center;
+}
 #section-services {
   background-image: url(./images/serv.jpg);
   background-repeat: no-repeat;
@@ -215,4 +229,104 @@ body {
 }
 .map {
   max-width: 600px;
+}
+#accordion {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+}
+.dropdown-pt {
+  display: grid;
+  grid-template-rows: 1fr;
+}
+
+#section-prices ul {
+  list-style: none;
+  perspective: 900;
+  padding: 0;
+  margin: 0;
+}
+#section-prices ul li {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  padding-bottom: 4px;
+  padding-top: 18px;
+  border-top: 1px dotted #dce7eb;
+}
+#section-prices ul li:nth-of-type(1) {
+  animation-delay: 0.5s;
+}
+#section-prices ul li:nth-of-type(2) {
+  animation-delay: 0.75s;
+}
+#section-prices ul li:nth-of-type(3) {
+  animation-delay: 1s;
+}
+#section-prices ul li:last-of-type {
+  padding-bottom: 0;
+}
+#section-prices ul li i {
+  position: absolute;
+  transform: translate(-6px, 0);
+  margin-top: 16px;
+  right: 0;
+}
+#section-prices ul li i:before,
+ul li i:after {
+  content: "";
+  position: absolute;
+  background-color: #ff6873;
+  width: 3px;
+  height: 9px;
+}
+#section-prices ul li i:before {
+  transform: translate(-2px, 0) rotate(45deg);
+}
+#section-prices ul li i:after {
+  transform: translate(2px, 0) rotate(-45deg);
+}
+#section-prices ul li input[type="checkbox"] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+}
+#section-prices ul li input[type="checkbox"]:checked ~ p {
+  margin-top: 0;
+  max-height: 0;
+  opacity: 0;
+  transform: translate(0, 50%);
+}
+#section-prices ul li input[type="checkbox"]:checked ~ i:before {
+  transform: translate(2px, 0) rotate(45deg);
+}
+#section-prices ul li input[type="checkbox"]:checked ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg);
+}
+
+@keyframes flipdown {
+  0% {
+    opacity: 0;
+    transform-origin: top center;
+    transform: rotateX(-90deg);
+  }
+  5% {
+    opacity: 1;
+  }
+  80% {
+    transform: rotateX(8deg);
+  }
+  83% {
+    transform: rotateX(6deg);
+  }
+  92% {
+    transform: rotateX(-3deg);
+  }
+  100% {
+    transform-origin: top center;
+    transform: rotateX(0deg);
+  }
 }
